--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -27,9 +27,8 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="16dp"
                 android:padding="8dp"
-                android:tint="@android:color/white"
                 android:background="@drawable/green_oval"
-                android:src="@drawable/ic_check_black_24dp"/>
+                android:src="@drawable/ic_check_white_24dp"/>
 
             <!--confirmation message text -->
             <TextView
@@ -142,9 +141,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_below="@id/create_account_hr"
                     android:layout_marginTop="16dp"
-                    android:tint="@android:color/white"
-                    android:background="@drawable/oval"
-                    android:src="@android:drawable/ic_input_add"/>
+                    android:background="@drawable/red_oval"
+                    android:src="@drawable/ic_add_white"/>
             </RelativeLayout>
 
             <!--guest check out only - confirmation after creating an account-->
@@ -180,9 +178,8 @@
                     android:layout_below="@id/account_confirmation_hr"
                     android:layout_marginTop="16dp"
                     android:padding="4dp"
-                    android:tint="@android:color/white"
                     android:background="@drawable/blue_oval"
-                    android:src="@drawable/ic_check_black_18dp"/>
+                    android:src="@drawable/ic_check_white_18dp"/>
                 <!--btn_check_buttonless_on-->
             </RelativeLayout>
 
