--- a/app/src/main/res/layout/login_create_page.xml
+++ b/app/src/main/res/layout/login_create_page.xml
@@ -32,6 +32,7 @@
         android:hint="Password"
         android:imeOptions="actionDone"
         android:singleLine="true"
+        android:maxLength="16"
         android:layout_below="@+id/emailIdRegister"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
