--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -80,7 +80,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:paddingRight="10dp"
-            android:src="@drawable/add_to_cart"
+            android:src="@drawable/ic_add_shopping_cart_black"
             android:visibility="gone"/>
         </RelativeLayout>
 
