--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="staples_dark">#b30000</color>
     <color name="staples_light">#cc0000</color>
+    <color name="background_black">#000000</color>
     <color name="background_red_submission">#cc0000</color>
     <color name="background_white">#ffffff</color>
     <color name="background_off_white">#f5f5f5</color>
