fixing order detail fragment to use AnimatorLayout, changing some fragments to use animated transitions

--- a/app/src/main/res/layout/order_detail_fragment.xml
+++ b/app/src/main/res/layout/order_detail_fragment.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<ScrollView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
@@ -345,3 +350,5 @@
 
     </LinearLayout>
 </ScrollView>
+
+</com.staples.mobile.cfa.widget.AnimatorLayout>
