weekly ad: fixing how storeid obtained weekly ad: getting date range

--- a/app/src/main/res/layout/weekly_ad_category.xml
+++ b/app/src/main/res/layout/weekly_ad_category.xml
@@ -39,10 +39,14 @@
                 android:textStyle="bold"
                 android:textSize="20sp"
                 />
+
+            <!-- "change store" link: including a little padding to increase touch area-->
             <TextView
                 android:id="@+id/change_store"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
                 android:textColor="@color/text_white"
                 android:textSize="16sp"
                 android:text="@string/change_store"
