fixing padding of "weekly ad" link in store finder details

--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -139,6 +139,7 @@
         <TextView
             android:id="@+id/weekly_ad_link2"
             style="@style/StoreItem"
+            android:paddingLeft="6dp"
             android:text="@string/weekly_ad_title"
             android:textColor="@color/text_blue"/>
 
