--- a/app/src/main/res/layout/sort_panel.xml
+++ b/app/src/main/res/layout/sort_panel.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.FlowRadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sort_panel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="@color/background_black">
-    <CheckBox
+    <RadioButton
         android:id="@+id/sort_best_match"
         style="@style/SortOptionStyle"
         android:text="@string/sort_best_match"/>
-    <CheckBox
-        android:id="@+id/sort_price_descending"
-        style="@style/SortOptionStyle"
-        android:text="@string/sort_price_descending"/>
-    <CheckBox
+    <RadioButton
         android:id="@+id/sort_price_ascending"
         style="@style/SortOptionStyle"
         android:text="@string/sort_price_ascending"/>
-</LinearLayout>
+    <RadioButton
+        android:id="@+id/sort_price_descending"
+        style="@style/SortOptionStyle"
+        android:text="@string/sort_price_descending"/>
+    <RadioButton
+        android:id="@+id/sort_name_ascending"
+        style="@style/SortOptionStyle"
+        android:text="@string/sort_title_ascending"/>
+    <RadioButton
+        android:id="@+id/sort_name_descending"
+        style="@style/SortOptionStyle"
+        android:text="@string/sort_title_descending"/>
+</com.staples.mobile.cfa.widget.FlowRadioGroup>
