--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,13 @@
         <item name="android:windowEnterAnimation">@anim/bottomsheet_slide_up</item>
         <item name="android:windowExitAnimation">@anim/bottomsheet_slide_down</item>
     </style>
+    <style name="SortOptionStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:lines">1</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
 
     <style name="DrawerStyle">
         <item name="android:layout_height">wrap_content</item>
@@ -66,13 +73,6 @@
         <item name="android:paddingLeft">6dp</item>
         <item name="android:paddingRight">6dp</item>
         <item name="android:textSize">20sp</item>
-    </style>
-
-    <style name="SortOptionStyle">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/text_white</item>
     </style>
 
     <style name="InputField">
