--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,11 +43,11 @@
         <item name="android:textSize">20sp</item>
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/text_nearly_black</item>
         <item name="android:visibility">gone</item>
     </style>
 
-    <style name="PanelStyle">
+    <style name="PanelAnimation">
         <item name="android:windowEnterAnimation">@anim/bottomsheet_slide_up</item>
         <item name="android:windowExitAnimation">@anim/bottomsheet_slide_down</item>
     </style>
