Finish sort variants, add drop-down to QuantityEditor

--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -63,6 +63,7 @@
             android:layout_below="@id/cartitem_price"
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
+            android:drawableRight="@drawable/ic_arrow_drop_down"
             android:textSize="14sp"
             android:textColor="@color/text_nearly_black"
             android:maxLength="4"
