--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -304,6 +304,7 @@
                 android:visibility="gone"
                 android:hint="1"
                 android:maxLength="4"
+                android:drawableRight="@drawable/ic_arrow_drop_down"
                 app:maxQuantity="10"
                 app:popupWidth="120dp"/>
             <Button
