--- a/app/src/main/res/layout/sort_panel.xml
+++ b/app/src/main/res/layout/sort_panel.xml
@@ -10,6 +10,10 @@
         style="@style/SortOptionStyle"
         android:text="@string/sort_best_match"/>
     <RadioButton
+        android:id="@+id/sort_highest_rated"
+        style="@style/SortOptionStyle"
+        android:text="@string/sort_highest_rated"/>
+    <RadioButton
         android:id="@+id/sort_price_ascending"
         style="@style/SortOptionStyle"
         android:text="@string/sort_price_ascending"/>
