--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -31,19 +31,75 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="10dp"
+			android:layout_marginBottom="8dp"
             android:lines="2"
             android:ellipsize="end"
             android:textSize="14sp"
             android:textColor="@color/text_nearly_black"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"/>
-        <com.staples.mobile.cfa.widget.PriceSticker
-            android:id="@+id/cartitem_price"
-            style="@style/SmallPriceSticker"
-            android:layout_below="@id/cartitem_title"
-            android:layout_marginBottom="11dp"
-            android:padding="0dp"/>
+
+		<!-- Shipping Logic -->
+		<LinearLayout
+			android:id="@+id/shipping_and_price_layout"
+			android:layout_below="@id/cartitem_title"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
+
+			<LinearLayout
+				android:id="@+id/shipping_logic_layout"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
+				android:visibility="gone">
+
+				<LinearLayout
+					android:id="@+id/overweight_layout"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal">
+					<LinearLayout
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:orientation="horizontal"
+						android:background="@color/background_dark_blue"
+						android:layout_marginTop="3dp"
+						android:layout_marginBottom="5dp">
+						<TextView
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content"
+							android:paddingLeft="5dp"
+							android:paddingRight="5dp"
+							android:paddingTop="2dp"
+							android:paddingBottom="2dp"
+							android:gravity="left"
+							android:text="@string/overweight"
+							android:textAllCaps="true"
+							android:textColor="@color/text_white"
+							android:textSize="10sp"
+							android:textStyle="bold"/>
+					</LinearLayout>
+					<TextView
+						style="@style/SkuBulletTextStyle"
+						android:paddingTop="2dp"
+						android:paddingBottom="2dp"
+						android:layout_marginTop="3dp"
+						android:layout_marginBottom="3dp"
+						android:textSize="10sp"
+						android:gravity="center_vertical|left"
+						android:text="@string/overweight_warming"/>
+				</LinearLayout>
+			</LinearLayout>
+
+			<com.staples.mobile.cfa.widget.PriceSticker
+				android:id="@+id/cartitem_price"
+				style="@style/SmallPriceSticker"
+				android:layout_marginBottom="11dp"
+				android:padding="0dp"/>
+
+		</LinearLayout>
+
         <ImageView
             android:id="@+id/cartitem_delete"
             android:layout_width="wrap_content"
