--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">4dp</item>
         <item name="android:layout_marginRight">4dp</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:textColor">@color/text_white</item>
+        <item name="circleColor">@color/background_red_submission</item>
         <item name="android:src">@drawable/ic_shopping_cart_black</item>
         <item name="android:visibility">gone</item>
     </style>
