--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -16,10 +16,67 @@
         style="@style/SmallProductTitle"
         android:layout_below="@+id/image"
         android:layout_marginTop="20dp"/>
+
+    <!-- Shipping Logic -->
+    <LinearLayout
+        android:id="@+id/shipping_logic_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/overweight_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="3dp"
+            android:visibility="gone">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@color/background_dark_blue">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:gravity="left"
+                    android:text="@string/overweight"
+                    android:textColor="@color/text_white"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/add_on_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="3dp"
+            android:visibility="gone">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@color/background_light_blue">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:gravity="left"
+                    android:text="@string/add_on"
+                    android:textColor="@color/text_white"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
     <com.staples.mobile.cfa.widget.PriceSticker
         android:id="@+id/pricing"
         style="@style/SmallPriceSticker"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/shipping_logic_layout"
         android:layout_marginTop="6dp"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/rating"
