--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -40,83 +40,81 @@
             android:paddingBottom="0dp"/>
 
 		<!-- Shipping Logic -->
-		<LinearLayout
+		<RelativeLayout
 			android:id="@+id/shipping_and_price_layout"
 			android:layout_below="@id/cartitem_title"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+		>
 
-			<LinearLayout
-				android:id="@+id/shipping_logic_layout"
-				android:layout_width="wrap_content"
+			<TextView
+				android:id="@+id/overweight_warning"
+				android:background="@color/background_dark_blue"
+				android:layout_alignParentLeft="true"
 				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:visibility="gone">
+				android:layout_marginBottom="5dp"
+				android:layout_marginTop="3dp"
+				android:layout_width="wrap_content"
+				android:paddingBottom="2dp"
+				android:paddingLeft="5dp"
+				android:paddingRight="5dp"
+				android:paddingTop="2dp"
+				android:text="@string/overweight"
+				android:textAllCaps="true"
+				android:textColor="@color/text_white"
+				android:textSize="10sp"
+				android:textStyle="bold"
+				android:visibility="gone"
+			/>
 
-				<LinearLayout
-					android:id="@+id/overweight_layout"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:orientation="horizontal">
-					<LinearLayout
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:orientation="horizontal"
-						android:background="@color/background_dark_blue"
-						android:layout_marginTop="3dp"
-						android:layout_marginBottom="5dp">
-						<TextView
-							android:layout_width="match_parent"
-							android:layout_height="wrap_content"
-							android:paddingLeft="5dp"
-							android:paddingRight="5dp"
-							android:paddingTop="2dp"
-							android:paddingBottom="2dp"
-							android:gravity="left"
-							android:text="@string/overweight"
-							android:textAllCaps="true"
-							android:textColor="@color/text_white"
-							android:textSize="10sp"
-							android:textStyle="bold"/>
-					</LinearLayout>
-					<TextView
-						style="@style/SkuBulletTextStyle"
-						android:paddingTop="2dp"
-						android:paddingBottom="2dp"
-						android:layout_marginTop="3dp"
-						android:layout_marginBottom="3dp"
-						android:textSize="10sp"
-						android:gravity="center_vertical|left"
-						android:text="@string/overweight_warming"/>
-				</LinearLayout>
-			</LinearLayout>
+			<TextView
+				android:id="@+id/add_on_warning"
+				android:background="@color/background_light_blue"
+				android:layout_alignParentLeft="true"
+				android:layout_below="@id/overweight_warning"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="5dp"
+				android:layout_marginTop="3dp"
+				android:layout_width="wrap_content"
+				android:paddingBottom="2dp"
+				android:paddingLeft="5dp"
+				android:paddingRight="5dp"
+				android:paddingTop="2dp"
+				android:text="@string/add_on"
+				android:textAllCaps="true"
+				android:textColor="@color/text_white"
+				android:textSize="10sp"
+				android:textStyle="bold"
+				android:visibility="gone"
+			/>
 
-			<com.staples.mobile.cfa.widget.PriceSticker
-				android:id="@+id/cartitem_price"
-				style="@style/SmallPriceSticker"
-				android:layout_marginBottom="11dp"
-				android:padding="0dp"/>
+		</RelativeLayout>
 
-		</LinearLayout>
+		<com.staples.mobile.cfa.widget.PriceSticker
+			android:id="@+id/cartitem_price"
+			android:layout_below="@id/shipping_and_price_layout"
+			style="@style/SmallPriceSticker"
+			android:layout_marginBottom="11dp"
+			android:padding="0dp"/>
 
         <ImageView
             android:id="@+id/cartitem_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cartitem_price"
+			android:layout_below="@id/cartitem_price"
             android:layout_alignParentLeft="true"
             android:layout_gravity="center_vertical"
             android:padding="1dp"
             android:background="@color/background_extra_light_gray"
             android:src="@drawable/ic_close_black_18dp"
             />
+
         <com.staples.mobile.cfa.widget.QuantityEditor
             android:id="@+id/cartitem_qty"
             style="@style/QtyEditorStyle"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cartitem_price"
+			android:layout_below="@id/shipping_and_price_layout"
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
             android:drawableRight="@drawable/ic_arrow_drop_down"
