--- a/app/src/main/res/layout/sort_panel.xml
+++ b/app/src/main/res/layout/sort_panel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.staples.mobile.cfa.widget.FlowRadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/sort_panel"
+    android:id="@+id/sort_options"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
