--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/expirationDate"
-            android:inputType="number"
+            android:inputType="date"
             android:maxLength="5"
             android:textSize="15sp"
             android:hint="MM/YY"
